# siarne

./: Cargo.toml  LICENSE  README.md
benches/: network_tick.rs
src/: lib.rs  network.rs  train.rs
src/train/: evolve.rs  mod.rs
