[package]
name = "ans"
version = "0.1.1"
authors = ["Pjottos <35270305+Pjottos@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "network_tick"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true
debug = 1
