[package]
name = "siarne"
version = "0.4.0"
authors = ["Pjottos <35270305+Pjottos@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Fast simulation of artificial neurons"
repository = "https://github.com/Pjottos/siarne"

keywords = ["ai", "neural-network", "integer-weights"]
categories = ["science"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "network_tick"
harness = false

[profile.release]
lto = true

[profile.bench]
lto = true
debug = 1
